# codevs-5.0

./: .gitignore  README.md
ai/: .gitignore  .gitignore~  CMakeLists.txt  Makefile  a.out  ai.cpp  game  game.cpp  myai.cpp  run.sh  test  test.cpp  test_input.txt
ai-mock/: Main.py  Makefile  __main__.py  ai.py  test_input.txt
ai-mock/ai/: __init__.py  brain.py  cell.py  character.py  codevs.py  directions.py  game_controller.py  game_input.py  game_output.py  point.py  state.py
ai-mock/inputs/: 死にそう  逃げる.txt
ai-mock/model/: point.py
ai-mock/test/: direction_pattern.py
ai/gtest/: brain_test.cpp  input_test.cpp  output_test.cpp  point_test.cpp  state_test.cpp
ai/inputs/: 4closed_pos.txt  around_dog.txt  block_escape.txt  block_ruin.txt  closed_sample.txt  debug.txt  first_turn.txt  near_block.txt  next_dog.txt  pinch_doppel.txt  send_dog_test.txt
ai/src/: base.h  brain.cpp  brain.h  cell.cpp  cell.h  character.cpp  character.h  codevs.h  controller.cpp  controller.h  direction.cpp  direction.h  evaluation.cpp  evaluation.h  game.cpp  input.cpp  input.h  output.cpp  output.h  path.cpp  path.h  point.cpp  point.h  state.cpp  state.h
